--- a/Position/index.html
+++ b/Position/index.html
@@ -6,10 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Position</title>
     <link rel="stylesheet" href="style.css">
+    <link rel = "preconnect" href = "https://fonts.googleapis.com">
+<link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+<link href = "https: //fonts.googleapis.com/css2? family = Montserrat: wght @ 300; 400; 600 & display = swap "rel =" stylesheet ">
 </head>
 <body>
     <div class="wallpaper">
-        
+        <header class="header">
+            <h1>Покупайте путёвки на Сатурн</h1>
+            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid molestias earum cum officiis at voluptatibus cumque rem sunt eius maxime et voluptatem ab repudiandae voluptates delectus, blanditiis ratione? Veritatis, aliquam?</h3>
+        </div>
     </div>
+    <section class="order">
+        <div class="order-background"></div>
+        <div class="order-mask"></div>
+            <div class="order-info">
+                <h3>Оставить заявку на тур</h3>
+        <button class="order-button">Заявка</button>                 
+            </div>       
+    </section>
 </body>
 </html>
