--- a/Position/index.html
+++ b/Position/index.html
@@ -9,6 +9,8 @@
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
 <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
 <link href = "https: //fonts.googleapis.com/css2? family = Montserrat: wght @ 300; 400; 600 & display = swap "rel =" stylesheet ">
+<script src="script.js"></script>
+<!-- ctrl+probel=выбор файла -->
 </head>
 <body>
     <div class="wallpaper">
@@ -22,8 +24,16 @@
         <div class="order-mask"></div>
             <div class="order-info">
                 <h3>Оставить заявку на тур</h3>
-        <button class="order-button">Заявка</button>                 
+        <button class="order-button" data-name="Заявка"></button> 
+        <button class="order-button-anim">Заявка</button>                 
+                
             </div>       
+    </section>
+    <section class="gradient">
+        <div class="content">
+            <h1>Pure CSS Animated Gradient Background</h1>
+            <button>Button 1</button><button>Button 2</button>
+        </div>
     </section>
 </body>
 </html>
