--- a/Position/index.html
+++ b/Position/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="wallpaper">
         <header class="header">
-            <h1>Покупайте путёвки на Сатурн</h1>
+            <h1 id='header'>Покупайте путёвки на Сатурн</h1>
             <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid molestias earum cum officiis at voluptatibus cumque rem sunt eius maxime et voluptatem ab repudiandae voluptates delectus, blanditiis ratione? Veritatis, aliquam?</h3>
         </div>
     </div>
