--- a/Position/index.html
+++ b/Position/index.html
@@ -9,8 +9,8 @@
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
 <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
 <link href = "https: //fonts.googleapis.com/css2? family = Montserrat: wght @ 300; 400; 600 & display = swap "rel =" stylesheet ">
-<script src="script.js"></script>
 <!-- ctrl+probel=выбор файла -->
+
 </head>
 <body>
     <div class="wallpaper">
@@ -35,5 +35,16 @@
             <button>Button 1</button><button>Button 2</button>
         </div>
     </section>
+    <section>
+        <input type="text" name="" id="username">
+        <input type="text" name="" id="username2">
+        <button id="click">Click me!</button>
+        <!-- <h2 id="header2"></h2> -->
+    </section>
+    <section id="section">
+
+    </section>
+    <script src="script.js"></script>
+    
 </body>
 </html>
